# thesis

./: .gitignore  README.md  build.sbt  example  initscript  worksheetExample.sc
.deprecated/: labelmarker.scala
.deprecated/.translators/: ClassAssert.scala
deprecated/: example  hw.scala  last
doc/: #cap1.lyx#  #cap2.lyx#  #cap3.lyx#  #cap4.lyx#  #cap5.lyx#  Contents.lyx  Dedication.lyx  Publications.lyx  abstract_en.lyx  abstract_es.lyx  agradecimientos.lyx  analisis.lyx  biblio.bib  bibliografia.lyx  cap1.lyx  cap2.lyx  cap3.lyx  cap4.lyx  cap5.lyx  cap6.lyx  cap8.lyx  caratula.lyx  classicthesis-config.tex  conclusiones.lyx  dedicatoria.lyx  definiciones_simetrias.lyx  dl.lyx  dl2ml.lyx  herramientas.lyx  introduccion.lyx  ontologias.lyx  owl.lyx  simDL.lyx  tesis.lyx
doc/gfx/: network_1.xpm  red_1.odg
doc/presentacion/: presentacion.aux  presentacion.dvi  presentacion.nav  presentacion.tex
ontologies/: dolce.owl  galen.owl  wine_3.owl
output/: FunctionalSyntaxOutput2.txt  test1.txt  test_dolce_001.txt  test_dolce_002.txt  test_family_002.txt  test_galen_001.txt  test_galen_002.txt  test_win3_3_002.txt  test_wine_3_001.txt  test_wine_3_002.txt
output/old/: ManchesterSyntaxOutput.txt  galen.txt  test_family_000.txt  test_family_001.txt  test_galen_000.txt
output/rendered/: test_dolce_002.txt  test_family_002.txt  test_galen_002.txt  test_wine_3_002.txt
output/translations/: test_dolce_ABox_000.txt  test_dolce_TBox_000.txt  test_family_ABox_000.txt  test_family_TBox_000.txt  test_galen_ABox_000.txt  test_galen_TBox_000.txt  test_wine_ABox_000.txt  test_wine_TBox_000.txt
scripts/: b.sh  bp.sh  build.sh  doall.sh  fbuild.sh  findsymm.sh  generate_sheet.py  info.sh  init.sh  k.sh  map.sh  mapper.scala  mkdirs.sh  s.sh  sbt.sh  unzip.sh  wipe.sh
src/main/.worksheets/: AxiomParser.sc  classes.sc  formulaeWS.sc  testWS.sc  translationsWS.sc
src/main/scala/: AxiomParser.sc  Manager.scala  axiomVisitorTest.sc  classes.sc  stringSplitWS.sc  testWS.sc  translationsWS.sc
tools/: README
tools/bliss-generator/: .project  bliss-generator.cabal  debug_bliss.sh  exec_bliss.sh  proc_bliss.sh  to_bliss.sh
tools/bliss-generator/src/: BlissGraph.hs  bliss_proccess.py  makefile  proc_bliss.py  to_bliss.hs
tools/builds/: go-bliss.txt  go.intohylo  go.map  go.stats  pipeline.sh
tools/kcnf-converter/: .project  README  find-inc.sh  kcnf-converter.cabal  to_kcnf.sh
tools/kcnf-converter/src/: Rewriter.hs  makefile  to_kcnf.hs
tools/modal-symm/: .project  .pydevproject
tools/modal-symm/src/: bliss_proccess.py  process_random_csv.py  (+3 more)
tools/scripts/: .project  README  kcnf-to-bliss.sh  proc_htab.py  run_all_sym_tests.sh  run_k.sh  run_kt.sh  run_s4.sh  run_spartacus.sh
tools/sy4ncl/: makefile  sy4ncl  sy4ncl.cabal
tools/sy4ncl/scripts/: exec_bliss.sh  pack_files.sh  proc_bliss.py  proc_bliss.sh  run_batch.sh  search-symms.sh  to_bliss.sh
tools/sy4ncl/src/: sy4ncl.hs
tools/sy4ncl/src/Sy4NCL/: BMLGraph.hs  BlissWriter.hs  CommandLine.hs  Graph.hs  Main.hs  MappingWriter.hs  StatsWriter.hs  Utils.hs
tools/sy4ncl/tests/: test-1.intohylo  test-2.intohylo  test-3.intohylo  test-4.intohylo  test-5.intohylo  test-6.intohylo  test-7.intohylo  test.conf
tools/symm-classifier/: .project  .pydevproject  Makefile  classify_symms.sh  pipeline.sh  run_var_analyzer.sh  symm-classifier.cabal
tools/symm-classifier/pysrc/: analyzer.py  classify_symms.py  classify_symms2.py  parser.py  proc_var_analyzer_data.py  stats.py  utils.py
tools/symm-classifier/src/: Main.hs  Makefile  VarAnalyzer.hs  test.txt
(+130 files in other folders)
