name:           bliss-generator
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         ezequiel

executable bliss-generator
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   transformers,
                   mtl,
                   containers,
                   hylolib
  hs-source-dirs:  src
  ghc-options:     -Wall
  extensions:      DoAndIfThenElse

