name:           kcnf-converter
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         ezequiel

executable kcnf_converter
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   containers,
                   mtl,
                   uniplate,
                   hylolib
  ghc-options:     -O2 -Wall -rtsopts
  extensions:
                    FlexibleContexts
  other-modules:   
                   Rewriter
  main-is:         to_kcnf.hs