name:           symm-classifier
version:        0.1
cabal-version:  >= 1.2
build-type:     Custom
author:         ezequiel

executable symm-classifier
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   VarAnalyzer

library 
  build-depends:   
                   base >= 4,
                   hylolib,
                   containers
  hs-source-dirs:  src
  ghc-options:     -Wall

